NEW188287
Web Inspector: [Backend] Page.searchInResources sometimes returns duplicate results for a resource
https://bugs.webkit.org/show_bug.cgi?id=188287
Summary Web Inspector: [Backend] Page.searchInResources sometimes returns duplicate r...
Joseph Pecoraro
Reported 2018-08-02 16:55:21 PDT
Web Inspector: [Backend] Page.searchInResources sometimes returns duplicate results for a resource Steps to Reproduce: 1. Inspect <https://www.cio.com> 2. Search for "touchMoved:" 3. May require a reload + research to trigger this issue => Page.searchInResources result sometimes includes select2.js multiple times Logs: [Log] request: {"id":795,"method":"Page.searchInResource","params":{"frameId":"0.4","url":"https://www.cio.com/www.idge.ans/js/select2-3.5.0/select2.js","query":"touchMoved:","caseSensitive":false,"isRegex":false}} (Main.js, line 941) [Log] request: {"id":796,"method":"Page.searchInResource","params":{"frameId":"0.4","url":"https://www.cio.com/www.idge.ans/js/select2-3.5.0/select2.js","query":"touchMoved:","caseSensitive":false,"isRegex":false,"requestId":"0.972"}} (Main.js, line 941) Notes: • PageAgent::searchInResources searches cached resources • NetworkAgent::searchOtherRequests searches NetworkData data, such as XHRs and Worker scripts See also: Frontend workaround for this: <https://webkit.org/b/188270> Web Inspector: Global search sometimes returns duplicate results for a resource Apparently we are hitting the same resource multiple times. How can the backend avoid this duplicated work?
Attachments
Radar WebKit Bug Importer
Comment 1 2018-08-02 16:55:42 PDT
Frances Cornwall
Comment 2 2024-05-06 10:54:06 PDT
Note You need to log in before you can comment on or make changes to this bug.