Web Inspector: [Backend] Page.searchInResources sometimes returns duplicate results for a resource https://webkit.org/b/188287

Reviewed by NOBODY (OOPS!).

Fix Page.searchInResources on the backend:
Create a ListHashSet to store each key so that they are each saved only once.
If a key is not already saved, a key can be added.
Add a unique identifier to each key.
Add case insensistivity if there is no regex in the search field.

* Source/WebCore/inspector/agents/InspectorPageAgent.cpp:
(WebCore::InspectorPageAgent::searchInResources):